# go/echo/api-gateway/microservice/handler/model.go
@@ -1,5 +1,7 @@
 package handler
 
+import "mime/multipart"
+
 type sumRequest struct {
 	InputX int `json:"inputX" form:"inputX" xml:"inputX"`
 	InputY int `json:"inputY" form:"inputY" xml:"inputY"`
@@ -7,4 +9,12 @@ type sumRequest struct {
 
 type sumResponse struct {
 	Sum int `json:"sum" form:"sum" xml:"sum"`
+}
+
+type fileRequest struct {
+	File *multipart.FileHeader `json:"file" form:"file" xml:"file"`
+}
+
+type fileResponse struct {
+	Success bool `json:"file" form:"file" xml:"file"`
 }
